web_src/css/standalone/swagger.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  background: #fff;
}

.swagger-back-link {
  color: #4990e2;
  text-decoration: none;
  position: absolute;
  top: 1rem;
  right: 1.5rem;
  display: flex;
  align-items: center;
}

@media (prefers-color-scheme: dark) {
  body {
    background: #1c2022;
  }
  .swagger-back-link {
    color: #51a8ff;
  }
}

.swagger-back-link:hover {
  text-decoration: underline;
}

.swagger-back-link svg {
  color: inherit;
  fill: currentcolor;
  margin-right: 0.5rem;
}

.swagger-spec-content {
  display: none;
}

